# cmake_packaging

./: .gitignore  README.md
app/: CMakeLists.txt  CMakePresets.json  main.cpp
lib/: CMakeLists.txt  Config.cmake.in  MathFunctions.cpp
